--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import math\n",
     "import sys\n",
     "import os\n",
+    "import sklearn.metrics\n",
     "\n",
     "sys.path.append(os.path.abspath('../src/'))\n",
     "import ActivationFunctions\n",
@@ -21,7 +22,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = np.array([[0.57222327],\n",
+    " [0.58132577],\n",
+    " [0.56822736],\n",
+    " [0.56487216],\n",
+    " [0.57791762],\n",
+    " [0.57126008],\n",
+    " [0.56043036],\n",
+    " [0.56904478],\n",
+    " [0.57646819],\n",
+    " [0.56855023],\n",
+    " [0.5666165 ],\n",
+    " [0.57307756],\n",
+    " [0.568183  ],\n",
+    " [0.5667654 ],\n",
+    " [0.571149  ],\n",
+    " [0.57375706],\n",
+    " [0.56653493],\n",
+    " [0.56977107],\n",
+    " [0.5677408 ],\n",
+    " [0.58081657],\n",
+    " [0.56122032],\n",
+    " [0.5680683 ],\n",
+    " [0.57159028],\n",
+    " [0.57736382],\n",
+    " [0.57091247],\n",
+    " [0.5712501 ],\n",
+    " [0.58113382],\n",
+    " [0.57484242],\n",
+    " [0.57483538],\n",
+    " [0.57588792],\n",
+    " [0.56842425]] )\n",
+    "true_values = np.array([[1],\n",
+    " [1],\n",
+    " [1],\n",
+    " [0],\n",
+    " [0],\n",
+    " [0],\n",
+    " [1],\n",
+    " [0],\n",
+    " [1],\n",
+    " [1],\n",
+    " [0],\n",
+    " [0],\n",
+    " [1],\n",
+    " [0],\n",
+    " [1],\n",
+    " [0],\n",
+    " [0],\n",
+    " [0],\n",
+    " [1],\n",
+    " [1],\n",
+    " [0],\n",
+    " [0],\n",
+    " [0],\n",
+    " [1],\n",
+    " [1],\n",
+    " [1],\n",
+    " [1],\n",
+    " [1],\n",
+    " [0],\n",
+    " [1],\n",
+    " [0]])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 0 0 0 1 0 1 1 0 0 1 0 1 0 0 0 1 1 0 0 0 1 1 1 1 1 0 1 0] 31 [1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1] 31\n",
+      "0.5161290322580645\n",
+      "0.5161290322580645\n",
+      "[1 1 1 0 0 0 1 0 1 1 0 0 1 0 1 0 0 0 1 1 0 0 0 1 1 1 1 1 0 1 0] 31 [1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1] 31\n",
+      "0.3404255319148936\n",
+      "0.3404255319148936\n",
+      "0.3404255319148936\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ErrorFunctions.accuracy(predictions, true_values))\n",
+    "print(sklearn.metrics.accuracy_score(true_values.flatten(), [1 if x > 0.5 else 0 for x in predictions.flatten()]))\n",
+    "print(ErrorFunctions.f1_score(predictions, true_values))\n",
+    "print(sklearn.metrics.f1_score(true_values.flatten(), [1 if x > 0.5 else 0 for x in predictions.flatten()], average='macro'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'N' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m accuracy \u001b[38;5;241m=\u001b[39m (true_values \u001b[38;5;241m==\u001b[39m predictions)\u001b[38;5;241m.\u001b[39msum() \u001b[38;5;241m/\u001b[39m \u001b[43mN\u001b[49m\n\u001b[1;32m      2\u001b[0m TP \u001b[38;5;241m=\u001b[39m ((predictions \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m&\u001b[39m (true_values \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m))\u001b[38;5;241m.\u001b[39msum()\n\u001b[1;32m      3\u001b[0m FP \u001b[38;5;241m=\u001b[39m ((predictions \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m&\u001b[39m (true_values \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m))\u001b[38;5;241m.\u001b[39msum()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'N' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = (true_values == predictions).sum() / N\n",
+    "TP = ((predictions == 1) & (true_values == 1)).sum()\n",
+    "FP = ((predictions == 1) & (true_values == 0)).sum()\n",
+    "precision = TP / (TP+FP)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
