--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,20 +92,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 0 0 0 1 0 1 1 0 0 1 0 1 0 0 0 1 1 0 0 0 1 1 1 1 1 0 1 0] 31 [1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1] 31\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ErrorFunctions.accuracy(np.array([[1], [0]]), np.array([[0], [1]])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "0.5161290322580645\n",
-      "0.5161290322580645\n",
-      "[1 1 1 0 0 0 1 0 1 1 0 0 1 0 1 0 0 0 1 1 0 0 0 1 1 1 1 1 0 1 0] 31 [1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1] 31\n",
-      "0.3404255319148936\n",
-      "0.3404255319148936\n",
-      "0.3404255319148936\n"
+      "0.5161290322580645\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'ErrorFunctions' has no attribute 'f1_score'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(ErrorFunctions\u001b[38;5;241m.\u001b[39maccuracy(predictions, true_values))\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(sklearn\u001b[38;5;241m.\u001b[39mmetrics\u001b[38;5;241m.\u001b[39maccuracy_score(true_values\u001b[38;5;241m.\u001b[39mflatten(), [\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.5\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m predictions\u001b[38;5;241m.\u001b[39mflatten()]))\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mErrorFunctions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mf1_score\u001b[49m(predictions, true_values))\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(sklearn\u001b[38;5;241m.\u001b[39mmetrics\u001b[38;5;241m.\u001b[39mf1_score(true_values\u001b[38;5;241m.\u001b[39mflatten(), [\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.5\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m predictions\u001b[38;5;241m.\u001b[39mflatten()], average\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmacro\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'ErrorFunctions' has no attribute 'f1_score'"
      ]
     }
    ],
@@ -118,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
