--- a/notebook/ML_cup_gs_LEGENDARY_G.ipynb
+++ b/notebook/ML_cup_gs_LEGENDARY_G.ipynb
@@ -128,11 +128,11 @@
     }
    ],
    "source": [
-    "MS = ModelSelection('../data/gs_data/1l_sigmoid_tanh_3.csv')\n",
+    "MS = ModelSelection('../data/gs_data/1l_tanh_3.csv')\n",
     "MS.default_values['metrics'] = [ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]\n",
     "hyperparam_grid = {\n",
     "    'lambda_tikhonov':[0.0000001, 0.000001],\n",
-    "    'batch_size':[50, 100],\n",
+    "    'batch_size':[10, 20, 50],\n",
     "    'min_epochs': [100],\n",
     "    'max_epochs':[800],\n",
     "    \n",
@@ -154,7 +154,7 @@
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
     "\n",
     "c1 = lambda x: x\n",
-    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 12, False, constr)"
+    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 2, False, constr)"
    ]
   }
  ],
