--- a/notebook/ML_cup_gs_LEGENDARY_G.ipynb
+++ b/notebook/ML_cup_gs_LEGENDARY_G.ipynb
@@ -100,23 +100,26 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/geco/ML_Proj_NN/src/ModelSelection.py:270: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  df = pandas.concat([pandas.read_csv(f, header = 0) for f in backup_file], ignore_index=True)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already done:  0\n",
+      "Already done:  6\n",
       "tot conf: 108\n",
-      "remaining conf: 108\n",
-      "tot conf to do: 108\n",
-      "pid: 38217  started new kfold 1 / 22\n",
-      "pid: 38242  started new kfold 1 / 22\n",
-      "pid: 38277  started new kfold 1 / 22\n",
-      "pid: 38303  started new kfold 1 / 21\n",
-      "pid: 38334  started new kfold 1 / 21\n",
-      "pid: 38277  started new kfold 2 / 22\n",
-      "pid: 38242  started new kfold 2 / 22\n",
-      "pid: 38303  started new kfold 2 / 21\n",
-      "pid: 38217  started new kfold 2 / 22\n",
-      "pid: 38334  started new kfold 2 / 21\n"
+      "remaining conf: 102\n",
+      "tot conf to do: 102\n",
+      "pid: 51341  started new kfold 1 / 21\n",
+      "pid: 51366  started new kfold 1 / 21\n",
+      "pid: 51400  started new kfold 1 / 20\n",
+      "pid: 51425  started new kfold 1 / 20\n",
+      "pid: 51456  started new kfold 1 / 20\n"
      ]
     }
    ],
@@ -146,7 +149,7 @@
     "c1 = lambda x: x\n",
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
     "\n",
-    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 5, False, constr)"
+    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 5, True, constr)"
    ]
   }
  ],
