--- a/notebook/ML_cup_gs_LEGENDARY_G.ipynb
+++ b/notebook/ML_cup_gs_LEGENDARY_G.ipynb
@@ -119,7 +119,9 @@
       "pid: 51366  started new kfold 1 / 21\n",
       "pid: 51400  started new kfold 1 / 20\n",
       "pid: 51425  started new kfold 1 / 20\n",
-      "pid: 51456  started new kfold 1 / 20\n"
+      "pid: 51456  started new kfold 1 / 20\n",
+      "pid: 51366  started new kfold 2 / 21\n",
+      "pid: 51425  started new kfold 2 / 20\n"
      ]
     }
    ],
