--- a/notebook/ML_cup_gs_LEGENDARY_G.ipynb
+++ b/notebook/ML_cup_gs_LEGENDARY_G.ipynb
@@ -121,7 +121,10 @@
       "pid: 51425  started new kfold 1 / 20\n",
       "pid: 51456  started new kfold 1 / 20\n",
       "pid: 51366  started new kfold 2 / 21\n",
-      "pid: 51425  started new kfold 2 / 20\n"
+      "pid: 51425  started new kfold 2 / 20\n",
+      "pid: 51341  started new kfold 2 / 21\n",
+      "pid: 51400  started new kfold 2 / 20\n",
+      "pid: 51456  started new kfold 2 / 20\n"
      ]
     }
    ],
