--- a/notebook/ML_cup_gs_LEGENDARY_G.ipynb
+++ b/notebook/ML_cup_gs_LEGENDARY_G.ipynb
@@ -124,7 +124,8 @@
       "pid: 51425  started new kfold 2 / 20\n",
       "pid: 51341  started new kfold 2 / 21\n",
       "pid: 51400  started new kfold 2 / 20\n",
-      "pid: 51456  started new kfold 2 / 20\n"
+      "pid: 51456  started new kfold 2 / 20\n",
+      "pid: 51425  started new kfold 3 / 20\n"
      ]
     }
    ],
