--- a/notebook/ML_cup_gs_LEGENDARY_G.ipynb
+++ b/notebook/ML_cup_gs_LEGENDARY_G.ipynb
@@ -125,7 +125,84 @@
       "pid: 51341  started new kfold 2 / 21\n",
       "pid: 51400  started new kfold 2 / 20\n",
       "pid: 51456  started new kfold 2 / 20\n",
-      "pid: 51425  started new kfold 3 / 20\n"
+      "pid: 51425  started new kfold 3 / 20\n",
+      "pid: 51341  started new kfold 3 / 21\n",
+      "pid: 51366  started new kfold 3 / 21\n",
+      "float division by zero\n",
+      "pid: 51366  started new kfold 4 / 21\n",
+      "pid: 51400  started new kfold 3 / 20\n",
+      "float division by zero\n",
+      "pid: 51400  started new kfold 4 / 20\n",
+      "pid: 51456  started new kfold 3 / 20\n",
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/tmp/ipykernel_51274/1694389158.py\", line 26, in <module>\n",
+      "    MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 5, True, constr)\n",
+      "  File \"/home/geco/ML_Proj_NN/src/ModelSelection.py\", line 402, in grid_searchKF\n",
+      "  File \"/usr/lib/python3.12/multiprocessing/process.py\", line 149, in join\n",
+      "    res = self._popen.wait(timeout)\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/multiprocessing/popen_fork.py\", line 43, in wait\n",
+      "    return self.poll(os.WNOHANG if timeout == 0.0 else 0)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/multiprocessing/popen_fork.py\", line 27, in poll\n",
+      "    pid, sts = os.waitpid(self.pid, flag)\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "KeyboardInterrupt\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/interactiveshell.py\", line 2144, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1435, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1326, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1173, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1088, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 970, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "    ^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 792, in lines\n",
+      "    return self._sd.lines\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/core.py\", line 734, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/core.py\", line 681, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/core.py\", line 660, in executing_piece\n",
+      "    return only(\n",
+      "           ^^^^^\n",
+      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/executing/executing.py\", line 116, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
      ]
     }
    ],
