--- a/notebook/ML_cup_gs_LEGENDARY_G.ipynb
+++ b/notebook/ML_cup_gs_LEGENDARY_G.ipynb
@@ -100,109 +100,30 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/geco/ML_Proj_NN/src/ModelSelection.py:270: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  df = pandas.concat([pandas.read_csv(f, header = 0) for f in backup_file], ignore_index=True)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already done:  6\n",
-      "tot conf: 108\n",
-      "remaining conf: 102\n",
-      "tot conf to do: 102\n",
-      "pid: 51341  started new kfold 1 / 21\n",
-      "pid: 51366  started new kfold 1 / 21\n",
-      "pid: 51400  started new kfold 1 / 20\n",
-      "pid: 51425  started new kfold 1 / 20\n",
-      "pid: 51456  started new kfold 1 / 20\n",
-      "pid: 51366  started new kfold 2 / 21\n",
-      "pid: 51425  started new kfold 2 / 20\n",
-      "pid: 51341  started new kfold 2 / 21\n",
-      "pid: 51400  started new kfold 2 / 20\n",
-      "pid: 51456  started new kfold 2 / 20\n",
-      "pid: 51425  started new kfold 3 / 20\n",
-      "pid: 51341  started new kfold 3 / 21\n",
-      "pid: 51366  started new kfold 3 / 21\n",
-      "float division by zero\n",
-      "pid: 51366  started new kfold 4 / 21\n",
-      "pid: 51400  started new kfold 3 / 20\n",
-      "float division by zero\n",
-      "pid: 51400  started new kfold 4 / 20\n",
-      "pid: 51456  started new kfold 3 / 20\n",
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
+      "Already done:  103\n",
+      "tot conf: 120\n",
+      "remaining conf: 22\n",
+      "tot conf to do: 22\n",
+      "pid: 1299  started new kfold 1 / 2\n",
+      "pid: 1334  started new kfold 1 / 2\n",
+      "pid: 1359  started new kfold 1 / 2\n",
+      "pid: 1390  started new kfold 1 / 2\n",
+      "pid: 1415  started new kfold 1 / 2\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/tmp/ipykernel_51274/1694389158.py\", line 26, in <module>\n",
-      "    MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 5, True, constr)\n",
-      "  File \"/home/geco/ML_Proj_NN/src/ModelSelection.py\", line 402, in grid_searchKF\n",
-      "  File \"/usr/lib/python3.12/multiprocessing/process.py\", line 149, in join\n",
-      "    res = self._popen.wait(timeout)\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/lib/python3.12/multiprocessing/popen_fork.py\", line 43, in wait\n",
-      "    return self.poll(os.WNOHANG if timeout == 0.0 else 0)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/lib/python3.12/multiprocessing/popen_fork.py\", line 27, in poll\n",
-      "    pid, sts = os.waitpid(self.pid, flag)\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/interactiveshell.py\", line 2144, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1435, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1326, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1173, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1088, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(record))\n",
-      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 970, in format_record\n",
-      "    frame_info.lines, Colors, self.has_colors, lvals\n",
-      "    ^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 792, in lines\n",
-      "    return self._sd.lines\n",
-      "           ^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/core.py\", line 734, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/core.py\", line 681, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "                             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/stack_data/core.py\", line 660, in executing_piece\n",
-      "    return only(\n",
-      "           ^^^^^\n",
-      "  File \"/home/geco/ML_Proj_NN/.venv/lib/python3.12/site-packages/executing/executing.py\", line 116, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 26\u001b[0m\n\u001b[1;32m     23\u001b[0m c1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: x\n\u001b[1;32m     24\u001b[0m constr \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124madamax\u001b[39m\u001b[38;5;124m'\u001b[39m: (c1, [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlearning_rate\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124malpha_momentum\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlr_decay_tau\u001b[39m\u001b[38;5;124m'\u001b[39m], [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124madamax_learning_rate\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexp_decay_rate_1\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexp_decay_rate_2\u001b[39m\u001b[38;5;124m'\u001b[39m])}\n\u001b[0;32m---> 26\u001b[0m \u001b[43mMS\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrid_searchKF\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtr_norm_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhyperparam_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m12\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconstr\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/ML_Proj_NN/src/ModelSelection.py:396\u001b[0m, in \u001b[0;36mModelSelection.grid_searchKF\u001b[0;34m(self, data_set, hyperparameters, k_folds, n_proc, recovery, constraints)\u001b[0m\n\u001b[1;32m    393\u001b[0m \u001b[38;5;66;03m# distribute equally the workload among the processes\u001b[39;00m\n\u001b[1;32m    394\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_proc): \n\u001b[1;32m    395\u001b[0m     \u001b[38;5;66;03m# to give some time to the machine (and not make orrible print at the start)\u001b[39;00m\n\u001b[0;32m--> 396\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    397\u001b[0m     start \u001b[38;5;241m=\u001b[39m end\n\u001b[1;32m    398\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m remainder \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -216,11 +137,11 @@
     "    'max_epochs':[800],\n",
     "    \n",
     "    'adamax' : [True, False],\n",
-    "    'adamax_learning_rate' : [0.02, 0.005, 0.1],\n",
-    "    'exp_decay_rate_1':[0.9],\n",
-    "    'exp_decay_rate_2':[0.999],\n",
+    "    'adamax_learning_rate' : [0.05, 0.1, 0.2],\n",
+    "    'exp_decay_rate_1':[0.9, 0.8],\n",
+    "    'exp_decay_rate_2':[0.999, 0.9],\n",
     "    \n",
-    "    'learning_rate':[0.005, 0.01, 0.05, 0.1],\n",
+    "    'learning_rate':[0.01, 0.05, 0.1],\n",
     "    'lr_decay_tau':[100, 137.5, 175], #epochs\n",
     "    'alpha_momentum':[0.75, 0.9],\n",
     "    \n",
@@ -232,7 +153,7 @@
     "c1 = lambda x: x\n",
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
     "\n",
-    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 5, True, constr)"
+    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 12, True, constr)"
    ]
   }
  ],
