--- a/notebook/ML_cup_gs_LEGENDARY_J_blessed copy.ipynb
+++ b/notebook/ML_cup_gs_LEGENDARY_J_blessed copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -71,22 +71,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already done:  0\n",
-      "tot conf: 108\n",
-      "remaining conf: 108\n",
-      "tot conf to do: 108\n",
-      "pid: 38217  started new kfold 1 / 22\n",
-      "pid: 38242  started new kfold 1 / 22\n",
-      "pid: 38277  started new kfold 1 / 22\n",
-      "pid: 38303  started new kfold 1 / 21\n",
-      "pid: 38334  started new kfold 1 / 21\n"
+      "Already done:  56\n",
+      "tot conf: 112\n",
+      "remaining conf: 56\n",
+      "tot conf to do: 56\n",
+      "pid: 76579  started new kfold 1 / 14\n",
+      "pid: 76607  started new kfold 1 / 14\n",
+      "pid: 76632  started new kfold 1 / 14\n",
+      "pid: 76657  started new kfold 1 / 14\n",
+      "pid: 76607  started new kfold 2 / 14\n",
+      "pid: 76579  started new kfold 2 / 14\n",
+      "pid: 76657  started new kfold 2 / 14\n",
+      "pid: 76632  started new kfold 2 / 14\n",
+      "pid: 76632  started new kfold 3 / 14\n",
+      "pid: 76607  started new kfold 3 / 14\n",
+      "pid: 76579  started new kfold 3 / 14\n",
+      "pid: 76657  started new kfold 3 / 14\n",
+      "pid: 76632  started new kfold 4 / 14\n",
+      "pid: 76607  started new kfold 4 / 14\n",
+      "pid: 76579  started new kfold 4 / 14\n",
+      "pid: 76657  started new kfold 4 / 14\n",
+      "pid: 76632  started new kfold 5 / 14\n",
+      "pid: 76607  started new kfold 5 / 14\n",
+      "pid: 76657  started new kfold 5 / 14\n",
+      "pid: 76579  started new kfold 5 / 14\n",
+      "pid: 76632  started new kfold 6 / 14\n",
+      "pid: 76657  started new kfold 6 / 14\n",
+      "pid: 76579  started new kfold 6 / 14\n",
+      "pid: 76607  started new kfold 6 / 14\n",
+      "pid: 76632  started new kfold 7 / 14\n",
+      "pid: 76579  started new kfold 7 / 14\n",
+      "pid: 76607  started new kfold 7 / 14\n",
+      "pid: 76657  started new kfold 7 / 14\n",
+      "pid: 76657  started new kfold 8 / 14\n",
+      "pid: 76579  started new kfold 8 / 14\n",
+      "pid: 76632  started new kfold 8 / 14\n",
+      "pid: 76632  started new kfold 9 / 14\n",
+      "pid: 76657  started new kfold 9 / 14\n",
+      "pid: 76607  started new kfold 8 / 14\n",
+      "pid: 76579  started new kfold 9 / 14\n",
+      "pid: 76632  started new kfold 10 / 14\n",
+      "pid: 76607  started new kfold 9 / 14\n",
+      "pid: 76657  started new kfold 10 / 14\n",
+      "pid: 76579  started new kfold 10 / 14\n",
+      "pid: 76632  started new kfold 11 / 14\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jacopo/Desktop/ML_Proj_NN/src/OutputNeuron.py:241: RuntimeWarning: overflow encountered in multiply\n",
+      "  self.partial_weight_update += (delta_error * predecessors_outputs)\n",
+      "/home/jacopo/Desktop/ML_Proj_NN/src/HiddenNeuron.py:248: RuntimeWarning: overflow encountered in scalar multiply\n",
+      "  self.partial_successors_weighted_errors += (delta * weight)\n",
+      "/home/jacopo/Desktop/ML_Proj_NN/src/HiddenNeuron.py:271: RuntimeWarning: overflow encountered in multiply\n",
+      "  self.partial_weight_update += (delta_error * predecessors_outputs)\n",
+      "/home/jacopo/Desktop/ML_Proj_NN/src/HiddenNeuron.py:261: RuntimeWarning: invalid value encountered in scalar multiply\n",
+      "  delta_error = self.partial_successors_weighted_errors * ActivationFunctions.derivative(self.f, self.net, *self.f_parameters)\n",
+      "/home/jacopo/Desktop/ML_Proj_NN/src/HiddenNeuron.py:271: RuntimeWarning: invalid value encountered in add\n",
+      "  self.partial_weight_update += (delta_error * predecessors_outputs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution Failed, w:[-3.53366253e+259             -inf             -inf             -inf\n",
+      "             -inf             -inf             -inf             -inf\n",
+      "             -inf             -inf             -inf             -inf\n",
+      "             -inf]\n",
+      "pid: 76657  started new kfold 11 / 14\n",
+      "pid: 76632  started new kfold 12 / 14\n",
+      "pid: 76607  started new kfold 10 / 14\n",
+      "pid: 76657  started new kfold 12 / 14\n",
+      "pid: 76579  started new kfold 11 / 14\n",
+      "pid: 76607  started new kfold 11 / 14\n",
+      "pid: 76632  started new kfold 13 / 14\n",
+      "pid: 76657  started new kfold 13 / 14\n",
+      "pid: 76607  started new kfold 12 / 14\n",
+      "pid: 76579  started new kfold 12 / 14\n",
+      "pid: 76632  started new kfold 14 / 14\n",
+      "pid: 76657  started new kfold 14 / 14\n",
+      "pid: 76579  started new kfold 13 / 14\n",
+      "pid: 76607  started new kfold 13 / 14\n",
+      "pid: 76607  started new kfold 14 / 14\n",
+      "pid: 76579  started new kfold 14 / 14\n"
      ]
     }
    ],
@@ -95,18 +172,18 @@
     "MS.default_values['metrics'] = [ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]\n",
     "hyperparam_grid = {\n",
     "    'lambda_tikhonov':[0.000001],\n",
-    "    'batch_size':[10, 20],\n",
+    "    'batch_size':[10, 20, 30, 50],\n",
     "    'min_epochs': [100],\n",
     "    'max_epochs':[800],\n",
     "    \n",
     "    'adamax' : [True, False],\n",
-    "    'adamax_learning_rate' : [0.02, 0.008, 0.1],\n",
+    "    'adamax_learning_rate' : [0.002, 0.02, 0.008, 0.1],\n",
     "    'exp_decay_rate_1':[0.9],\n",
     "    'exp_decay_rate_2':[0.999],\n",
     "    \n",
-    "    'learning_rate':[0.01, 0.05, 0.1],\n",
+    "    'learning_rate':[0.01, 0.03, 0.05, 0.1],\n",
     "    'lr_decay_tau':[125, 175], #epochs\n",
-    "    'alpha_momentum':[0.75],\n",
+    "    'alpha_momentum':[0.5, 0.75, 0.9],\n",
     "    \n",
     "    \n",
     "    'error_increase_tolerance':[0.000001],\n",
@@ -116,7 +193,7 @@
     "c1 = lambda x: x\n",
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
     "\n",
-    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 5, False, constr)"
+    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 4, True, constr)"
    ]
   }
  ],
@@ -136,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
