--- a/notebook/done/ML_cup_gs_LEGENDARY_S_Plof.ipynb
+++ b/notebook/done/ML_cup_gs_LEGENDARY_S_Plof.ipynb
@@ -123,32 +123,26 @@
     }
    ],
    "source": [
-    "MS = ModelSelection('../data/gs_data/1l_sigmoid_3.csv')\n",
+    "MS = ModelSelection('../data/gs_data/1l_sigmoid_3_prova.csv')\n",
     "MS.default_values['metrics'] = [ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]\n",
     "hyperparam_grid = {\n",
-    "    'lambda_tikhonov':[0.0000001, 0.000001],\n",
+    "    'lambda_tikhonov':[0.0],\n",
     "    'batch_size':[10, 20],\n",
     "    'min_epochs': [100],\n",
-    "    'max_epochs':[800],\n",
+    "    'max_epochs':[400],\n",
     "    \n",
-    "    'adamax' : [True, False],\n",
-    "    'adamax_learning_rate' : [0.02, 0.005, 0.1],\n",
-    "    'exp_decay_rate_1':[0.9],\n",
-    "    'exp_decay_rate_2':[0.999],\n",
-    "    \n",
-    "    'learning_rate':[0.005, 0.01, 0.05, 0.1],\n",
-    "    'lr_decay_tau':[100, 137.5, 175], #epochs\n",
-    "    'alpha_momentum':[0.75, 0.9],\n",
+    "    'learning_rate':[0.005, 0.001, 0.01, 0.0005],\n",
+    "    'lr_decay_tau':[300], #epochs\n",
+    "    'alpha_momentum':[0.75],\n",
     "    \n",
     "    \n",
-    "    'error_increase_tolerance':[0.000001],\n",
+    "    'error_increase_tolerance':[0.0001],\n",
     "    'patience':[5],\n",
     "    'topology': [str(sigmoid_l1)],\n",
+    "    \n",
+    "    'adamax': [False]\n",
     "}\n",
-    "c1 = lambda x: x\n",
-    "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
-    "\n",
-    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 6, True, constr)"
+    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 6, False)"
    ]
   }
  ],
