--- a/notebook/ML_cup_gs_ASTONISHING_FG_Gauss.ipynb
+++ b/notebook/ML_cup_gs_ASTONISHING_FG_Gauss.ipynb
@@ -108,7 +108,7 @@
     "    'max_epochs':[500],\n",
     "    \n",
     "    \n",
-    "    'learning_rate':[0.07, 0.09, 0.11, 0.13], #0.15\n",
+    "    'learning_rate':[0.07, 0.09], # 0.11, 0.13], #0.15\n",
     "    'lr_decay_tau':[145, 165, 185, 200],\n",
     "    'alpha_momentum':[0.85, 0.92, 0.95],\n",
     "    \n",
