--- a/notebook/ML_cup_gs_ASTONISHING_FG_Jacobi.ipynb
+++ b/notebook/ML_cup_gs_ASTONISHING_FG_Jacobi.ipynb
@@ -103,12 +103,12 @@
     "MS.default_values['metrics'] = [ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]\n",
     "hyperparam_grid = {\n",
     "    'lambda_tikhonov':[0.000000001, 0.00000001, 0.0000001],\n",
-    "    'batch_size':[6, 8, 11],\n",
+    "    'batch_size':[11], # 6, 8, \n",
     "    'min_epochs': [150],\n",
     "    'max_epochs':[500],\n",
     "    \n",
     "    \n",
-    "    'learning_rate':[0.07, 0.09, 0.11, 0.13], #0.15\n",
+    "    'learning_rate':[0.11, 0.13], # 0.11, 0.13], #0.15\n",
     "    'lr_decay_tau':[145, 165, 185, 200],\n",
     "    'alpha_momentum':[0.85, 0.92, 0.95],\n",
     "    \n",
